# Flexor-pipeline

./: .gitignore  AI_PROCESS.md  README.md  assignment (2).md  pyproject.toml
src/email_ingest/: __init__.py  __main__.py  cdc.py  cli.py  config.py  identity.py  pipeline.py  scanner.py  staging.py  state.py
src/email_ingest/unpacker/: __init__.py  eml_handler.py  html_handler.py  mbox_handler.py  unsupported.py  zip_handler.py
test_data/namespace_a/timestamp=2024-07-15/: another_email.html  conversations.mbox  simple_email.eml
test_data/namespace_a/timestamp=2024-07-16/: new_email.eml
tests/: conftest.py  test_cdc.py  test_cli.py  test_crash_recovery.py  test_identity.py  test_pipeline_edge_cases.py  test_pipeline_happy_path.py  test_scanner.py  test_smoke.py  test_staging.py  test_state.py  test_unpacker_mbox.py  test_unpacker_registry.py  test_unpacker_zip.py
